style.css
body {
    display: flex;
    flex-direction: column;
    justify-content: center;

    margin: 0;
    
    min-height: 0;
    min-width: 0;

    font-family: Arial, Helvetica, sans-serif;
}

button {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
    width: 100px;
    height: 25px;
}

.container {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.header,
.footer {
    height: 72px;
    background: #1F2937;
    color: #F9FAF8;
    display: flex;
    flex-shrink: 0;
    justify-content: space-evenly;
    align-items: center;
}

.header {
    font-size: 24px;
    font-weight: 900;
    padding: 0 16px;
}


ul {
    display: flex;
    list-style-type: none;
    gap: 20px;
    font-size: 18px;
    font-weight: normal;
 
}

a {
    text-decoration: none;
    color: #F9FAF8;
}

.footer {
    flex-direction: column-reverse;
}


.title-container {
    background: #1F2937;
    display: flex;
    justify-content: space-evenly;
    align-items: center;

    padding: 100px;
    padding-bottom: 200px;

}

.text-window {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 450px;
    
}

.title {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

.title-text {
    font-size: 18px;
    color: #E5E7EB;
}

.title-button {
    background-color: #3882F6;
    border: 1px #3882F6;
    color: #E5E7EB;
    
}

.mountain {
    height: auto;
    width: 400px;
}

.second-container {
    display: flex;
    flex-direction: column;
    gap: 18px;
    padding: 50px;
    padding-bottom: 150px;
}

.pictures-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 50px;
    padding: 40px;
}

.second-title {
    display: flex;
    justify-content: center;
    align-items: center;

    color: #1F2937;
    font-size: 36px;
    font-weight: bolder;
}

.pictures {
    height: 120px;
    width: 120px;
    border: 2px solid #3882F6;
    border-radius: 4px;
}

.card {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 120px;
    height: 120px;

}

.text {
    text-align: center;
    color: grey;
    font-size: 12px;
}
    
.quote-box {
    display: flex;
    flex-direction: column;
    background: #E5E7EB;
    padding: 100px 200px;

}

.quote {
    font-size: 36px;
    font-style: italic;
    color: #1F2937;
    text-align: left;
}

.attribution {
    font-size: 20px;
    font-weight: bold;
    color: #1F2937;
    text-align: right;

}

.call-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
   
    background: #3882F6;
 
    border-radius: 10px;
    margin: 200px;

}


.call {
    display: flex;
    flex-direction: column;
    
}

.call-title {
    display: flex;
}

.call-text {
    display: flex;
}

.call-button {
    display: flex;

    background-color: #3882F6;
    border: 2px #F9FAF8;
    color: #F9FAF8;
}

